<resources>
    <string name="app_name">通联用餐</string>

    <string name="worker_name">员工姓名</string>
    <string name="shop_name">商家</string>
    <string name="input_money_key">输入就餐金额</string>
    <string name="pay_key">付款</string>
    <string name="finish_key">完成</string>
    <string name="message_key">无需支付真实费用,由公司与餐厅根据账卡记录统一结算</string>
    <string name="swipe_card_success">刷卡成功</string>
    <string name="trade_history">查看交易记录</string>

    <string name="pay_title">用餐二维码</string>
    <string name="trade_history_title">交易记录</string>
    <string name="refresh">刷新</string>

    <!-- 登录 -->
    <string name="user_send_login_response_0">登录成功</string>
    <string name="user_send_login_response_1">密码错误</string>
    <string name="user_send_login_response_2">参数错误</string>
    <string name="user_send_login_response_3">用户被锁定</string>
    <string name="user_send_login_response_4">用户不存在</string>
    <string name="user_send_login_response_7">验证码输入有误 </string>
    <string name="user_send_login_response_8">密码输入有误</string>
    <string name="user_send_login_response_9">登录失败</string>
    <string name="user_send_login_response_10">加载验证码失败，请重试！</string>
    <string name="user_login_pwd_tomatch_error">您的账号由于密码输入错误次数过多，已被锁定，请重置密码。 </string>
    <string name="password_reset_succeed">您已经完成密码重置</string>
    <string name="is_logout_current_account">是否登出当前账号</string>
    <string name="alter_password">修改密码</string>
    <string name="alter_password_success">修改密码成功</string>
    <string name="login_text">登录</string>
    <string name="my_forget_pwd">忘记密码</string>
    <string name="my_login_user_hit_3">手机号</string>
    <string name="my_login_user_hit">请输入手机号</string>
    <string name="my_login_user_hit_2">请输入用户名</string>
    <string name="my_login_user_hit_4">用户名</string>
    <string name="my_login_pwd_hit">请输入密码</string>
    <string name="my_login_pwd_hit_1">密码</string>
    <string name="my_login_pwd_hit_2">6~20位，支持字母、数字和符号</string>
    <string name="my_login_pwd_hit_3">请输入旧密码</string>
    <string name="my_login_pwd_hit_4">请输入新密码</string>
    <string name="my_login_pwd_hit_5">旧密码</string>
    <string name="my_login_pwd_hit_6">新密码</string>

    <!-- 验证码 -->
    <string name="my_login_code">验证码</string>
    <string name="my_login_code_hit">6位验证码</string>
    <string name="my_login_code_hit_1">4位验证码</string>
    <string name="loading_state">加载状态</string>
    <string name="user_send_code_response_0">验证码发送成功</string>
    <string name="user_send_code_response_16">你输入的手机号码或用户名不存在，请重现输入</string>
    <string name="user_send_code_response_17">该手机号已注册</string>
    <string name="user_send_code_response_18">验证码错误，请重新获取</string>
    <string name="user_send_code_response_20">验证码过期，请重新获取</string>
    <string name="user_send_code_response_21">验证码发送失败</string>
    <string name="user_send_code_response_27">50秒内不能连续发送</string>
    <string name="user_send_code_response_28">验证码错误</string>
    <string name="user_send_code_response_29">验证码过期</string>
    <string name="user_send_code_response_30">需要输入验证码</string>
    <string name="user_send_code_response_31">旧密码错误</string>
    <string name="user_send_code_response_38">之前未输入图片验证码</string>

    <!-- 网络状态 -->
    <string name="default_state">默认状态</string>
    <string name="NoConnectionError">网络暂时无法访问</string>
    <string name="ServerError">服务器正忙，请稍后再试</string>
    <string name="ParseError">解析错误，请稍后再试</string>
    <string name="TimeoutError">请求超时，请稍后再试</string>
    <string name="network_problem">网络不给力，请重试</string>
    <string name="loading_failed_and_try_again">加载失败，请重试</string>
    <string name="loading_again">重新加载</string>
    <string name="sorry_and_no_related_content">抱歉，暂无相关内容</string>
    <string name="request_fail">请求失败</string>
    <string name="loading">加载中…</string>
    <string name="operate_failed">操作失败</string>

    <!-- 我的 -->
    <string name="mine">我的</string>

    <!-- 扫码 -->
    <string name="request_camera_permission_tip">通联订餐 请求使用拍照权限</string>
    <string name="grant_failed">授权失败！</string>
    <string name="permission_denied">用户拒绝授予权限！</string>

    <!-- 交易 -->
    <string name="error_600">支付失败，您今天金额或次数已超过限制</string>
    <string name="error">支付失败，请稍后再试</string>
    <string name="error_no_name">未获取商家名称</string>
    <string name="error_no_Id">未获取商家ID</string>
    <string name="error_input">请输入金额</string>
</resources>
