<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:irr="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.datayes.dyoa.common.view.CTitle
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        irr:titleValue="@string/pay_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/worker_name"
                android:textAppearance="@style/font_T9"
                android:textColor="@color/color_O1"/>

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text=""
                android:textAppearance="@style/font_T9"
                android:textColor="@color/color_H9"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_name"
                android:textAppearance="@style/font_T9"
                android:textColor="@color/color_O1"/>

            <TextView
                android:id="@+id/tv_shop_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text=""
                android:textAppearance="@style/font_T9"
                android:textColor="@color/color_H9"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/input_money_key"
                android:textAppearance="@style/font_T9"
                android:textColor="@color/color_O1"/>

            <EditText
                android:id="@+id/ev_money"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.6"
                android:gravity="right"
                android:text=""
                android:textAppearance="@style/font_T9"
                android:textColor="@color/color_H9"/>
        </LinearLayout>

        <TextView
            android:id="@+id/btn_pay"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/orangebg_cycle_border"
            android:gravity="center"
            android:text="@string/pay_key"
            android:textAppearance="@style/font_T9"
            android:textColor="@color/color_W1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/message_key"
            android:textAppearance="@style/font_T3"
            android:textColor="@color/color_H7"/>
    </LinearLayout>
</LinearLayout>
